[gd_scene format=3 uid="uid://mqfahftx5qk1"]

[ext_resource type="Script" uid="uid://ifhsrwawlj24" path="res://scripts/backups_template.gd" id="2_mgg5s"]

[node name="BackupsTemplate" type="PanelContainer" unique_id=152856914]
offset_right = 297.0
offset_bottom = 93.0
script = ExtResource("2_mgg5s")

[node name="MarginContainer" type="MarginContainer" parent="." unique_id=2066118148]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer" unique_id=860708051]
layout_mode = 2
alignment = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer" unique_id=1107342082]
layout_mode = 2

[node name="BackupName" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer2" unique_id=729541529]
layout_mode = 2
size_flags_horizontal = 3
text = "NAME"
horizontal_alignment = 1
autowrap_mode = 2

[node name="Flashback" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer2" unique_id=1517480654]
layout_mode = 2
text = "Flashback"

[node name="Trash" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer2" unique_id=1087470153]
layout_mode = 2
text = "Trash"

[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer2/Flashback" to="." method="_on_flashback_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer2/Trash" to="." method="_on_trash_pressed"]
